refine inputs for parent, folder for local testing

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html ng-app="pkmn.sm.prng">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pokemon Sun/Moon Egg RNG Tool</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap-tpls.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!--<script src="lib/angular.min.js"></script>
+    <script src="lib/ui-bootstrap-tpls.min.js"></script>
+    <link href="lib/bootstrap.min.css" rel="stylesheet">-->
+
+
     <script src="app.js"></script>
     <script src="component.js"></script>
-    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body ng-controller="AppController as vm">
