--- a/pkm-parent-input.html
+++ b/pkm-parent-input.html
@@ -3,41 +3,69 @@
         <div class="row">
             <h5>Male Parent</h5>
         </div>
-        <form>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">HP</label>
-                <div class="col-sm-8">
+        <form class="form-inline">
+            <div class="form-group">
+                <label>HP</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.male.IV.HP" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Att</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Att</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.male.IV.Att" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Def</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Def</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.male.IV.Def" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Sp Att</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Sp Att</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.male.IV.SpAtt" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Sp Def</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Sp Def</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.male.IV.SpDef" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Spd</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Spd</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.male.IV.Spd" />
+                </div>
+            </div>
+        </form>
+        <form>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Item</label>
+                <div class="col-sm-4">
+                    <select ng-options="n for n in $ctrl.itemSelections" class="form-control" ng-model="$ctrl.male.Item">
+                    </select>
+                </div>
+                <div class="col-sm-4">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" ng-model="$ctrl.male.IsDitto">Is Ditto
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Nature</label>
+                <div class="col-sm-4">
+                    <select ng-options="n for n in $ctrl.natures" class="form-control" ng-model="$ctrl.male.Nature">
+                    </select>
+                </div>
+                <label class="col-sm-2 col-form-label">Ability Slot</label>
+                <div class="col-sm-4">
+                    <select ng-options="n for n in $ctrl.abilitySlots" class="form-control" ng-model="$ctrl.male.AbilitySlot">
+                    </select>
                 </div>
             </div>
         </form>
@@ -47,41 +75,69 @@
         <div class="row">
             <h5>Female Parent</h5>
         </div>
-        <form>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">HP</label>
-                <div class="col-sm-8">
+        <form class="form-inline">
+            <div class="form-group">
+                <label>HP</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.female.IV.HP" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Att</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Att</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.female.IV.Att" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Def</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Def</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.female.IV.Def" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Sp Att</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Sp Att</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.female.IV.SpAtt" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Sp Def</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Sp Def</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.female.IV.SpDef" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Spd</label>
-                <div class="col-sm-8">
+            <div class="form-group">
+                <label>Spd</label>
+                <div>
                     <input type="number" min="0" max="31" class="form-control" ng-model="$ctrl.female.IV.Spd" />
+                </div>
+            </div>
+        </form>
+        <form>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Item</label>
+                <div class="col-sm-4">
+                    <select ng-options="n for n in $ctrl.itemSelections" class="form-control" ng-model="$ctrl.female.Item">
+                    </select>
+                </div>
+                <div class="col-sm-4">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" ng-model="$ctrl.female.IsDitto">Is Ditto
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Nature</label>
+                <div class="col-sm-4">
+                    <select ng-options="n for n in $ctrl.natures" class="form-control" ng-model="$ctrl.female.Nature">
+                    </select>
+                </div>
+                <label class="col-sm-2 col-form-label">Ability Slot</label>
+                <div class="col-sm-4">
+                    <select ng-options="n for n in $ctrl.abilitySlots" class="form-control" ng-model="$ctrl.male.AbilitySlot">
+                    </select>
                 </div>
             </div>
         </form>
